# twitter-extractor

./: .env_example  .gitignore  Dockerfile  README.md  compose.yaml  init-schema.sql  main.py  pyproject.toml
tests/: test_processing.py
twitter_extractor/: exceptions.py  main_database_ingest_tweets.py  main_download_raw_tweets.py  main_process_tweets.py  main_processor.py  main_raw_download_tweets.py  main_raw_downloader.py  utils.py
